# zhihu-answer-analysis-report-skill

./: ._.git  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
core/: __init__.py
scripts/: zhihu_answer_report.py
